# rustyos

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  install_to_usb.sh  run_qemu.sh  setup.sh
OVMF/: OVMF_CODE.fd
common/src/: graphics.rs
kernel/: Cargo.toml  x86_64-unknown-rustyos.json
kernel/.cargo/: config.toml  config.yml
kernel/src/: ascii_font.rs  console.rs  gdt.rs  graphics.rs  interrupt.rs  log.rs  main.rs  paging.rs  serial.rs
loader/: Cargo.toml
loader/.cargo/: config.toml
loader/src/: graphics.rs  main.rs  memory.rs  mp.rs
