[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { version = "0.9.2", features = ["lock_api", "mutex"] }
x86_64 = "0.14.5"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"
