[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.14.5"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
embedded-graphics = "0.7.1"
spin = "0.9.2"
raw-cpuid = "10.2.0"
