[package]
name = "loader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = { version = "0.5.1", features = ["elf32", "elf64", "endian_fd"], default-features = false }
log = { version = "0.4.17", default-features = false }
uefi = { version = "0.16.0", features = ["alloc", "logger", "exts"] }
uefi-services = "0.13.0"
